# bi-fabrics-agent

./: .gitignore  README.md
fabric-audit-agent-app/: app.yaml  pyproject.toml
fabric-audit-agent-app/agent_server/: agent.py  fabric_direct.py  start_server.py
fabric-audit-agent-app/scripts/: start_app.py
fabric-audit-agent-app/tests/: test_agent_server.py  test_conversation_log.py  test_fabric_direct.py  test_harness.py  test_progress_text.py  test_prompt_parity.py
fabric-audit-agent-py/: .gitignore  CLAUDE.md  DEPLOYMENT.md  MCP-AGENT.md  PERMISSIONS.md  PHASE2-SP-TEST.md  PHASE3-DATABRICKS.md  README.md  STATUS.md  _parity_py.py  app.yaml  databricks.yml  pyproject.toml  requirements.txt  run.py
fabric-audit-agent-py/app/: agent.py
fabric-audit-agent-py/databricks/: run_csv_audit.py
fabric-audit-agent-py/docs/: B2-B6-QUICKDEPLOY.md  HANDOFF-eventhouse-build.md  HANDOFF.md  PHASE2-DEPLOY.md  investigation-core.md
fabric-audit-agent-py/docs/runbooks/: noisy-neighbor.md  refresh-collision.md  throttle-investigation.md
fabric-audit-agent-py/fabric_audit_agent/: __init__.py  __main__.py  accountability.py  anomaly.py  attribution.py  audience.py  cli.py  coaching.py  confidence.py  config.py  connectivity.py  conversation.py  correlate.py  data_agent.py  dax.py  diagnosis.py  egress.py  entrypoints.py  eval.py  finding.py  forecast.py  health_score.py  identity.py  job.py  key_utils.py  lifecycle.py  mcp_server.py  narrative.py  outbound.py  outcomes.py  pipeline.py  query_library.json  reasoner_stub.py  report_md.py  roadmap.py  routing.py  run_log.py  sanitize.py  scopes.json  severity.py  (+12 more)
fabric-audit-agent-py/fabric_audit_agent/adapters/: __init__.py  attribution_rollup.py  clients.py  collector_activity.py  collector_activity_events.py  collector_capacity_events.py  collector_csv.py  collector_events_la.py  collector_list_usages.py  collector_log_analytics.py  collector_merge.py  collector_mock.py  collector_rest.py  collector_workspace_monitoring.py  delivery_email.py  delivery_file.py  delivery_teams.py  lifecycle_store.py  reasoner_claude.py  reasoner_investigation.py  store_local.py  ticketing.py
fabric-audit-agent-py/fabric_audit_agent/agent/: __init__.py  investigator.py  loop.py  scripted_client.py  system_prompt.py  tools_anthropic.py
fabric-audit-agent-py/fabric_audit_agent/automation/: __init__.py  alerting.py  dedupe.py  digest.py  escalate.py  trend.py
fabric-audit-agent-py/fabric_audit_agent/detectors/: __init__.py  blast_radius.py  capacity.py  concentration.py  cost.py  model.py  pipeline.py  refresh.py  report.py  security.py  user_concentration.py
fabric-audit-agent-py/fabric_audit_agent/eval/: __init__.py  agent_cases.json  investigation_cases.json  mine_evals.py  score_investigations.py
fabric-audit-agent-py/fabric_audit_agent/importers/: __init__.py  capacity_metrics.py  csv.py  map.py  vpax.py
fabric-audit-agent-py/fabric_audit_agent/investigation/: __init__.py  baseline.py  diagnose.py  events.py  evidence.py  expensive.py  forecast_throttle.py  gates.py  overloads.py  patterns.py  playbooks.py  sku.py  spike_history.py  throttle.py  timepoint_peaks.py  watch.py  workload.py
fabric-audit-agent-py/fabric_audit_agent/kb/: __init__.py  capacity.py  cost.py  lineage.py  meta.py  model.py  pipeline.py  report.py  (+1 more)
fabric-audit-agent-py/fixtures/: capacity.throttle.json  estate.json
fabric-audit-agent-py/research/: 00-INDEX.md  01-databricks-sql.md  02-databricks-federation-connections.md  03-databricks-jobs-pipelines.md  04-delta-lake.md  05-databricks-aiml.md  06-databricks-governance-system-tables.md  07-databricks-azure-fabric-onelake-integration.md  08-azure-identity-rbac-keyvault.md  09-azure-monitor-functions-bot-networking.md  10-fabric-onelake-eventhouse-capacity-git-governance.md  11-powerbi-rest-embedding-gateways-governance.md  12-teams-delivery-bot-adaptivecards-graph.md  13-azure-log-analytics-deep.md  14-per-user-cu-attribution-methods.md  15-eventhouse-lakehouse-warehouse-storage.md  16-fabric-rti-eventstream-activator.md  17-semantic-model-dax-vertipaq.md  18-mcp-protocol-anthropic-claude-api.md  19-fabric-data-engineering-runtime.md  20-fabric-capacity-economics-sku-sizing.md  21-semantic-link-labs-sempy.md  22-fuam-prior-art-accelerators.md  23-mcp-harvest-inventory.md  24-knowledge-harvest-sources.md
fabric-audit-agent-py/tests/: test_adapters.py  test_agent_investigator.py  test_agent_loop.py  test_agent_system_prompt.py  test_agent_tools_anthropic.py  test_alerting.py  test_analytics.py  test_attribution.py  test_attribution_feature.py  test_attribution_rollup.py  test_automation.py  test_capacity_events_collector.py  test_capacity_metrics.py  test_cli.py  test_clients_kusto.py  test_collector_activity_events.py  test_collector_events_la.py  test_collector_rest.py  test_config.py  test_connectivity.py  test_csv.py  test_deeplinks.py  test_delivery_email.py  test_detect_all.py  test_detector_refresh.py  test_detectors.py  test_diagnose.py  test_diagnosis.py  test_egress.py  test_entrypoints.py  test_envelope.py  test_eval_agent.py  test_eval_investigations.py  test_events.py  test_expensive.py  test_finding.py  test_firewall.py  test_forecast_throttle.py  test_gates.py  test_glue.py  (+44 more)
(+220 files in other folders)
