[project]
name = "fabric-audit-agent-app"
version = "0.2.2"
description = "Read-only Fabric/Power BI audit agent - Phase 2 Databricks App"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.129.0",
    "uvicorn>=0.41.0",
    "mlflow>=3.10.0",
    "databricks-agents>=1.9.3",
    "databricks-sdk>=0.28",
    "databricks-mcp>=0.1",
    "requests>=2",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_server"]

[project.scripts]
start-app    = "scripts.start_app:main"
start-server = "agent_server.start_server:main"