[project]
name = "fabric-audit-agent"
version = "1.0.0"
description = "Read-only Microsoft Fabric / Power BI capacity & performance audit agent (Python, Databricks-ready)."
requires-python = ">=3.10"
dependencies = []   # anthropic / msal / databricks-sdk added as their adapters are ported

[project.optional-dependencies]
dev = ["pytest>=7"]
prod = ["requests>=2", "msal>=1.24", "anthropic>=0.39"]   # collector_rest / clients / reasoner_claude
mcp = ["mcp>=1.2"]                                          # mcp_server (pull surface)

[project.scripts]
fabric-audit = "fabric_audit_agent.__main__:_console"
fabric-audit-job = "fabric_audit_agent.job:job_main"   # Databricks wheel-task entry (unified sweep)
fabric-audit-mcp = "fabric_audit_agent.mcp_server:main"   # Databricks App entry (MCP server at /mcp)

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["fabric_audit_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
