[project]
name = "fabric-audit-agent"
version = "1.9.13"
description = "Read-only Microsoft Fabric / Power BI capacity & performance audit agent (Python, Databricks-ready)."
requires-python = ">=3.10"
dependencies = []   # anthropic / msal / databricks-sdk added as their adapters are ported

[project.optional-dependencies]
dev = ["pytest>=7", "tzdata>=2024.1"]   # tzdata: zoneinfo database for timefmt tests on Windows
prod = ["requests>=2", "msal>=1.24", "anthropic>=0.39"]   # collector_rest / clients / reasoner_claude
mcp = ["mcp>=1.2"]                                          # mcp_server (pull surface)
agent = [                                                   # Phase 2: agent app on Databricks Apps
    "requests>=2",
    "msal>=1.24",
    "databricks-sdk>=0.28",
    "databricks-ai-bridge>=0.4",
    "databricks-mcp>=0.1",
    "mlflow>=2.16",
    "azure-kusto-data>=4.0",
]

[project.scripts]
fabric-audit = "fabric_audit_agent.__main__:_console"
fabric-audit-job = "fabric_audit_agent.job:job_main"   # Databricks wheel-task entry (unified sweep)
fabric-audit-mcp = "fabric_audit_agent.mcp_server:main"   # Databricks App entry (MCP server at /mcp)
fabric-audit-watch = "fabric_audit_agent.watch_run:main"  # autonomous 5-min watcher (Job entry; --test-card to prove Teams webhook)

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["fabric_audit_agent*"]

# Ship the grounded KQL template catalog INSIDE the wheel. Without this, setuptools excludes
# the non-.py file and `_load_query_library` finds nothing in the installed package (prod), so
# `query_library` returns 0 templates even though run_kql's firewall is present. (Local tests pass
# because they read the source tree, not the wheel.)
[tool.setuptools.package-data]
fabric_audit_agent = ["query_library.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]